--- a/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -365,15 +365,20 @@ cursor: pointer;
 	color: #666666;
 	position: relative;
 	line-height: 24px;
-	overflow: hidden;
+
+	
+	display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+overflow: hidden;
 }
-.doctor-details .doctor-text::after {
+/*.doctor-details .doctor-text::after {
 	content: "...";
 	position: absolute;
 	bottom: 0;
 	right: 0;
 	padding-left: 40px;
-}
+}*/
 
 /*问答与论坛*/
 .question-forum{
@@ -699,6 +704,7 @@ cursor: pointer;
    	clear: both;
     padding-left: 20px;
  }
+ /*我的订单*/
  .order-wrap{
  	width: 960px;
  	min-height: 596px;
@@ -761,4 +767,199 @@ cursor: pointer;
 .order-box .all-change span:hover{
 	background: #00BC12;
 	color: white;
+}
+.order-wrap .all-order-wrap{
+	padding: 0 20px;
+}
+.order-wrap .order-model{
+	border: 1px solid #f0f0f0;
+	padding-bottom: 20px;
+	overflow: hidden;
+	margin-top:20px ;
+}
+.all-order-wrap .order-status{
+	background: #f0f0f0;
+	overflow: hidden;
+}
+.all-order-wrap .order-status li{
+	float: left;
+	padding: 13px 0;
+	margin-left: 20px;
+	color: #666666;
+}
+.all-order-wrap .order-status li span{
+	color: #333333;
+}
+.all-order-wrap .order-status li:nth-child(3){
+	margin-left: 68px;
+}
+.all-order-wrap .order-status li:nth-child(4){
+	margin-left: 30px;
+}
+.all-order-wrap .order-status li:nth-child(5){
+	margin-left: 50px;
+}
+.all-order-wrap .order-status li:nth-child(6){
+	margin-left: 60px;
+}
+.order-left{
+	width: 362px;
+	padding: 20px 0 0 20px;
+}
+.order-left .order-class-img{
+	width: 106px;
+	height: 60px;
+
+}
+.order-left .order-class-img img{
+	width: 100%;
+	height: 100%;
+}
+.order-left p{
+	float: right;
+	max-width: 225px;
+	height: 40px;
+	line-height: 20px;
+	margin-top: 10px;
+
+	display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+overflow: hidden;
+}
+.order-right{
+	width: 453px;
+    height: 60px;
+    margin-top: 20px;
+    line-height: 60px;
+}
+
+.order-right li{
+	float: left;
+	text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.order-right li:nth-child(1){
+	width: 126px;
+	max-width: 126px;
+	margin-right: 30px;
+}
+.order-right li:nth-child(2){
+	width: 56px;
+	max-width: 56px;
+	margin-right: 50px;
+}
+
+.order-right li:nth-child(3){
+	width: 56px;
+	max-width: 56px;
+	margin-right: 45px;
+}
+.order-right li span{
+	color: #F97B49;
+}
+.order-right li p{
+	line-height: 30px;
+	cursor: pointer;
+}
+/*我的钱包*/
+.wallet-wrap{
+	min-height: 596px;
+	width: 100%;
+	background: #f8f8f8;
+}
+.main-wallet-top{
+	width: 100%;
+	background: white;
+	height: 96px;
+	line-height: 96px;
+	padding-left: 20px;
+}
+.main-wallet-top li{
+	float: left;
+	color: #666666;
+	
+}
+.main-wallet-top li:nth-child(2){
+	color: #333333;
+	font-size: 26px;
+	margin-right: 60px;
+}
+
+
+.main-wallet-top li button{
+	width: 92px;
+	height: 36px;
+	background: #00bc12;
+	line-height: 36px;
+	border: 0;
+	outline: none;
+	color: #ffffff;
+	border-radius: 4px;
+}
+.main-wallet-bottom{
+	min-height: 480px;
+	margin-top: 20px;
+	background: white;
+	padding: 30px 20px;
+}
+.wallel-content-list .title-wallet{
+	padding-left: 10px;
+	border-left: 4px solid #00bc12;
+	line-height: 1;
+}
+.table-wallet-list{
+	width: 920px;
+	table-layout: fixed;
+	margin-top: 20px;
+}
+.table-wallet-list th{
+	background: #f0f0f0;
+	text-align: center;
+	color: #666666;
+	padding: 10px 0;
+	border-bottom: 1px solid #dedede;
+}
+.table-wallet-list th:nth-child(1){
+	width: 180px;
+}
+.table-wallet-list th:nth-child(2){
+	width: 170px;
+}
+.table-wallet-list th:nth-child(3){
+	width: 310px;
+	text-align: left;
+}
+.table-wallet-list th:nth-child(4){
+	width: 150px;
+}
+.table-wallet-list th:nth-child(5){
+	width: 110px;
+}
+.table-wallet-list td{
+	padding: 20px 0;
+	text-align: center;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden; 
+	border-bottom: 1px solid #f0f0f0;
+}
+.table-wallet-list td:nth-child(1){
+	width: 180px;
+	padding-left: 15px;
+}
+.table-wallet-list td:nth-child(2){
+	width: 170px;
+}
+.table-wallet-list td:nth-child(3){
+	width: 310px;
+	text-align: left;
+}
+.table-wallet-list td:nth-child(4){
+	width: 150px;
+}
+.table-wallet-list td:nth-child(5){
+	width: 110px;
 }
