[feature]信鸽推送接入以及优化遗留代码注入方式

--- a/pc/online-manager/src/main/webapp/bootstrap/assets/css/less/thirdparty-dropzone.less
+++ b/pc/online-manager/src/main/webapp/bootstrap/assets/css/less/thirdparty-dropzone.less
@@ -4,7 +4,7 @@
   .border-radius(0);
   border: 1px solid rgba(0, 0, 0, 0.06);
   
-  .dz-default.dz-message {
+  .dz-default.dz-xgMessage {
 	background-image: none;
 	font-size: 24px;
 	text-align: center;
