--- a/pc/online-manager/src/main/webapp/bootstrap/assets/css/less/navbar/user-buttons.less
+++ b/pc/online-manager/src/main/webapp/bootstrap/assets/css/less/navbar/user-buttons.less
@@ -1,4 +1,4 @@
-//the notifications and new message buttons
+//the notifications and new xgMessage buttons
 .ace-nav {
  height: 100%;
  margin: 0 !important;
