--- a/pc/online-web/src/main/webapp/web/css/header.less
+++ b/pc/online-web/src/main/webapp/web/css/header.less
@@ -307,7 +307,7 @@ html, body {
         .messageBox{
           position:relative;
           display:inline-block;
-          .message{
+          .xgMessage{
             font-size:14px;
             color:#333;
             vertical-align: middle;
