--- a/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -1069,3 +1069,44 @@ overflow: hidden;
     margin-top: 30px;
     border-radius: 4px;
 }
+
+/*个人资料*/
+
+
+/*个人资料结束*/
+/*消息*/
+.news-wrap{
+	width: 100%;
+	min-height: 596px;
+	background: white;
+}
+.news-wrap .mune-news{
+	height: 60px;
+	line-height: 60px;
+	border-bottom: 1px solid #f0f0f0;
+	padding-left: 20px;
+}
+
+.main-news{
+	padding: 20px;
+}
+.main-news button{
+	padding: 7px;
+	border: 0;
+	outline: none;
+	background: #F0F0F0;
+	border-radius: 2px;
+}
+.main-news ul li{
+	padding: 20px;
+	position: relative;
+}
+.main-news ul li .icon-tip{
+	background: #F97B49;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	position: absolute;
+	left: 0;
+	top: 5px;
+}
