增加课程直播预告--直播间-主讲人为空的状态，h5和ios（文本域）做修改。

--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -438,6 +438,7 @@ word-break:break-all;
     float: left;
     margin: 0.05rem 0.12rem 0 0rem;
     border-radius: 100px;
+    margin-top: 0.08rem;
 }
 .wrap_comment_title span{
 	float: right;
