--- a/pc/online-web/src/main/webapp/web/css/school/details-live.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-live.css
@@ -67,7 +67,7 @@ padding-bottom: 10px;
 	color: #999999;
 }
 .right-details .author-inf li img{
-
+	width: 120px;
 	display: block;
 	float: left;
 }
