完善页面跳转，渲染课程详情页面

--- a/pc/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-album.css
@@ -395,6 +395,21 @@ word-break:break-all;
 	border: 0;
 	outline: none;
 }
+.more-evaluate{
+	text-align: center;
+	margin-top: 20px;
+}
+.more-evaluate button{
+	    width: 92px;
+    height: 36px;
+    background: #00bc12;
+    line-height: 36px;
+    border: 0;
+    outline: none;
+    color: #ffffff;
+    border-radius: 4px;
+}
+
 /*常见问题*/
 .often-problem li{
 	margin-bottom: 50px;
