--- a/pc/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-album.css
@@ -126,7 +126,7 @@ padding-bottom: 10px;
 	width: 32px;
 	height: 32px;
 	border-radius: 50%;
-	border: 2px solid #00BC12;
+	border: 2px solid #ccc;
 	overflow: hidden;
 }
 .wrap-anthology ul li{
@@ -634,3 +634,61 @@ word-break:break-all;
 	margin-left: 110px;
 	outline: none;
 }
+
+
+/*环形进度条部分*/
+
+  *{  
+        margin: 0;  
+        padding: 0;  
+    }  
+    .wrap,.circle,.percent{  
+        position: absolute;  
+        width: 32px;  
+        height: 32px;  
+        border-radius: 50%;  
+    }  
+    .wrap{  
+        top:50px;  
+        left:50px;  
+        background-color: #ccc;  
+    }  
+    .circle{  
+        box-sizing: border-box;  
+        border:2px solid #ccc;  
+        clip:rect(0,32px,32px,16px);  
+    }  
+    .clip-auto{  
+        clip:rect(auto, auto, auto, auto);  
+    }  
+    .percent{  
+        box-sizing: border-box;  
+        top:-2px;  
+        left:-2px;  
+    }  
+    .left{  
+        transition:transform ease;  
+        border:2px solid #00BC12;  
+        clip: rect(0,16px,32px,0);  
+    }  
+    .right{  
+        border:2px solid #00BC12;  
+        clip: rect(0,32px,32px,16px);  
+    }  
+    .wth0{  
+        width:0;  
+    }  
+    .num{  
+        position: absolute;  
+        box-sizing: border-box;  
+        width: 28px;  
+        height: 28px;  
+        line-height: 28px;  
+        text-align: center;  
+        font-size: 12px;  
+        left: 2px;  
+        top: 2px;  
+        border-radius: 50%;  
+        background-color: #fff;  
+        z-index: 1;  
+    }  
