--- a/pc/online-web/src/main/webapp/web/css/school/details-video.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-video.css
@@ -25,12 +25,13 @@ a:hover{text-decoration: none;}
 .left-cover{
 	width: 462px;
 	height: 260px;
-	
+	position: relative;
 }
 .left-cover img{
 	width: 100%;
 	height: 100%;
 	display: block;
+
 }
 .right-details{
 	width: 677px;
