--- a/wechat/src/main/webapp/xcview/css/apprentice/invitation_card.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/invitation_card.css
@@ -64,6 +64,22 @@ header{
 	color: #333333;
 	text-align: center;
 }
+.header_news {
+    width: 0.42rem;
+    height: 0.38rem;
+    position: absolute;
+    z-index: 10;
+    top: 0.25rem;
+    right: 0.26rem;
+}
+.header_news img {
+    width: 0.42rem;
+    height: 0.43rem;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    right: 0;
+}
 .fiexd{
 	width: 100%;
 	height: 0.88rem;
@@ -87,3 +103,37 @@ header{
 	color: #FFFFFF;
 }
 /*中间内容结束*/
+
+/*分享开始*/
+.weixin_ceng {
+    width: 100%;
+    height: 100%;
+    display: none; 
+}
+.weixin_ceng_bg {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999999999999999;
+}
+.weixin_img {
+    /* background: red; */
+    position: fixed;
+    z-index: 99999999999;
+    top: 0rem;
+    right: 0;
+}
+.weixin_img img {
+    position: absolute;
+    top: 0rem;
+    right: 0.26rem;
+    width: 3rem;
+    z-index: 99999999999;
+}
+
+
+
