--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -25,12 +25,24 @@ li{
 header{
 	width: 100%;
 	height: 3.02rem;
-	background: url(http://test-wx.xczhihui.com/xcview/images/anchorbg.png) no-repeat;
-	background-size: 100% 100%;
+	/* background: url(http://test-wx.xczhihui.com/xcview/images/anchorbg.png) no-repeat;
+	background-size: 100% 100%; */
 }
 .intro{
 	width: 100%;
 	height: 0.88rem;
+}
+.special_img{
+	width: 100%;
+    height: 3.02rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+.special_img img{
+	width: 100%;
+    height: 3.02rem;
 }
 .intro_top{
 	width: 2.24rem;
