报名页--判断提交

--- a/wechat/src/main/webapp/xcview/css/apprentice/apply.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apply.css
@@ -284,7 +284,7 @@ color:#bbb;
 	height: 0.72rem;
 	line-height: 0.72rem;
 	margin: 0 auto;
-	background: rgba(0,188,18,0.30);
+	background: #00bc12;
 	border-radius: 100px;
 	font-size: 0.3rem;
 	color: #FFFFFF;
