--- a/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/pc/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -454,7 +454,7 @@ overflow: hidden;
     word-wrap: break-word;
     margin: 0;
     line-height: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
   .opened {
     height: auto !important;
@@ -1237,7 +1237,18 @@ overflow: hidden;
 .main-news ul .read-news{
 	color: #999999;
 }
-
+/*意见反馈*/
+.feedback-wrap{
+	width: 100%;
+	min-width: 596px;
+}
+.feedback-wrap .mune-opinion{
+	    height: 60px;
+    line-height: 60px;
+    border-bottom: 1px solid #f0f0f0;
+    padding-left: 20px;
+    font-size: 16px;
+}
 .opinion-title{
 	padding: 30px 20px 20px;
 }
