专辑列表添加滚动条

--- a/pc/online-web/src/main/webapp/web/css/liveVideo.css
+++ b/pc/online-web/src/main/webapp/web/css/liveVideo.css
@@ -688,6 +688,10 @@ overflow-y: auto;
     top: 64px;
     width: 310px;
     height: 100%;
+    overflow: auto;
+}
+.album_list > ul{
+	height: auto;
 }
 .album_list > ul > li{
 	height: 40px;
