--- a/pc/online-web/src/main/webapp/web/css/school/curriculum-list.css
+++ b/pc/online-web/src/main/webapp/web/css/school/curriculum-list.css
@@ -100,6 +100,7 @@ a:hover{text-decoration: none;}
     width: 113px;
     height: 22px;
     margin-top: 15px;
+    position: relative;
 }
 #search-text{
 	outline: none;
@@ -112,12 +113,15 @@ a:hover{text-decoration: none;}
 .author-search button{
 	background: transparent;
 	width: 22px;
-	height: 20px;
+	height: 22px;
 	border: 0;
 	outline: none;
 	float: right;
 	background: url(../../images/search.png) no-repeat center;
 	background-color: #D8D8D8;
+	position: absolute;
+	    top: -1px;
+    right: 0;
 }
 .reset-btn{
 	    padding: 3px 10px;
