--- a/pc/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-album.css
@@ -128,6 +128,9 @@ padding-bottom: 10px;
 	color: white;
 	font-size: 20px;
 }
+.immediately-buy a{
+	color: white;
+}
 /*详情/评价/常见问题*/
 /*选集*/
 .wrap-anthology{
@@ -192,13 +195,19 @@ padding-bottom: 10px;
 	padding-bottom: 10px ;
 	border-bottom: 3px solid transparent;
 	padding: 0 36px;
-
+	
 	cursor: pointer;
 	height: 59px;
 	font-size: 16px;
 }
+.wrap-sidebar ul li a{
+	color: #333333;
+	}
 .wrap-sidebar ul .active-footer{
 	border-bottom: 3px solid #00BC12;
+	color: #00BC12;
+}
+.wrap-sidebar ul .active-footer a{
 	color: #00BC12;
 }
 .sidebar-content{
