--- a/pc/online-web/src/main/webapp/web/css/school/anchor-details.css
+++ b/pc/online-web/src/main/webapp/web/css/school/anchor-details.css
@@ -328,6 +328,7 @@ p{margin-bottom: 0;}
 .impression-content .impression-list li img{
 	margin-top: -4px;
 	margin-left: 7px;
+	width: 120px;
 }
 .want-evaluate{
 	width: 92px;
