--- a/pc/online-web/src/main/webapp/web/css/school/curriculum-list.css
+++ b/pc/online-web/src/main/webapp/web/css/school/curriculum-list.css
@@ -50,6 +50,10 @@ a:hover{text-decoration: none;}
 	margin-right: 50px;
 	line-height: 50px;
 	cursor: pointer;
+	color: #333333;
+}
+.select-all dl a .selected{
+	color: #00BC12;
 }
 .selected{
 	color: #00BC12;
