--- a/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -246,7 +246,7 @@ margin-left: 20px;
     box-sizing: content-class-box;
     overflow: hidden;
 }
-.save-class > div > a .detail .title {
+.save-class .course > a .detail .title {
     max-width: 260px;
     /* height: 30px; */
     display: inline-block;
@@ -257,18 +257,18 @@ margin-left: 20px;
     text-overflow: ellipsis;
     margin-bottom: 0;
 }
-.save-class > div > a .detail .timeAndTeac {
+.save-class .course > a .detail .timeAndTeac {
     display: block;
     margin: 2px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.save-class > div > a .detail .timeAndTeac span {
+.save-class .course > a .detail .timeAndTeac span {
     font-size: 12px;
     color: #999;
 }
-.save-class > div > a .detail .timeAndTeac span {
+.save-class .course > a .detail .timeAndTeac span {
     font-size: 12px;
     color: #999;
     max-width: 100px;
@@ -277,19 +277,19 @@ margin-left: 20px;
     text-overflow: ellipsis;
     display: inline-block;
 }
-.save-class > div > a .detail .info > span:nth-child(1) {
+.save-class .course > a .detail .info > span:nth-child(1) {
     float: left;
 }
-.save-class > div > a .detail .info .price {
+.save-class .course > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
     font-size: 16px;
     color: #F97B49;
 }
-.save-class > div > a .detail span {
+.save-class .course > a .detail span {
     color: #999;
 }
-.save-class > div > a .detail .info > span:nth-child(2) {
+.save-class .course > a .detail .info > span:nth-child(2) {
     float: right;
 }
 .save-class .stuCount .studentCou{
