--- a/online-web/src/main/webapp/web/css/liveVideo.css
+++ b/online-web/src/main/webapp/web/css/liveVideo.css
@@ -165,7 +165,7 @@ marquee {
   color: #fff;
 }
 .right {
-  //position: absolute;
+  position: absolute;
   top: 0;
   right: 0;
   height: 100%;
@@ -729,11 +729,13 @@ overflow-y: auto;
 .choosedAlbum{
 	background: #fff !important;
 }
-.teacher_name{
-	display: inline-block;
-    max-width: 64px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    vertical-align: middle;
+#auto_play[type="checkbox"] {
+	  -webkit-appearance: none;  /*清除复选框默认样式*/
+		  background: #fff url(../images/blue.png);   /*复选框的背景图，就是上图*/
+		  height: 22px;   /*高度*/
+		  vertical-align: middle;
+		  width: 22px;
 }
+#auto_play[type="checkbox"]:checked {
+		  background-position: -48px 0;
+		}
