--- a/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -249,13 +249,13 @@ margin-left: 20px;
 .save-class .course > a .detail .title {
     max-width: 260px;
     /* height: 30px; */
-    display: inline-block;
+    display: block;
     overflow: hidden;
     font-size: 14px;
     color: #333;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin-bottom: 0;
+    margin-bottom: 8px;
 }
 .save-class .course > a .detail .timeAndTeac {
     display: block;
@@ -283,7 +283,7 @@ margin-left: 20px;
 .save-class .course > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
-    font-size: 16px;
+    font-size: 14px;
     color: #F97B49;
 }
 .save-class .course > a .detail span {
@@ -521,10 +521,19 @@ overflow: hidden;
 	margin-right: 20px;
 	width: 142px;
 	height: 80px;
+	position: relative;
 }
 .show-img ul li img{
-	width: 100%;
-	height: 100%;
+	    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
 }
 .time-status{
 	overflow: hidden;
@@ -670,6 +679,11 @@ overflow: hidden;
 .post-box table tr td{
 	padding: 20px 0 20px 20px;
 	border-bottom: 1px solid #f0f0f0;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden; 
+}
+.post-box table tr td p{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden; 
