--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -824,11 +824,6 @@ a {
 /*左侧结构结束*/
 
 
-
-
-
-
-
 /*右侧结构开始*/
 
 
@@ -846,58 +841,195 @@ a {
 	color: #333333;
 }
 
+
 /*cssTpl---通用的名义推荐的部分样式*/
-.doctorInfTpl{
-	    margin-bottom: 20px;
-	    height: 60px;
+
+.doctorInfTpl {
+	margin-bottom: 20px;
+	height: 60px;
 }
-.doctorInfTpl >div{
+
+.doctorInfTpl>div {
 	display: inline-block;
 	float: left;
-	    margin-right: 20px;
+	margin-right: 20px;
 }
-.doctorInfTpl > .dajia_inf > p{
-	  width: 180px;
-    height: 20px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    margin-top: 10px;
-    font-size: 14px;
+
+.doctorInfTpl .zuozhe_inf {
+	margin-right: 0;
 }
-.doctorInfTpl > .dajia_inf >span{
+
+.doctorInfTpl>.dajia_inf>p {
+	width: 180px;
+	height: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	margin-top: 10px;
+	font-size: 14px;
+}
+
+.doctorInfTpl>.dajia_inf>span {
 	font-weight: 700;
 	font-size: 14px;
 }
-.doctorInfTpl > .touxiang{
+
+.doctorInfTpl>.touxiang {
 	width: 60px;
 	height: 60px;
 }
-.doctorInfTpl > .touxiang a{
+
+.doctorInfTpl>.touxiang a {
 	width: 60px;
 	height: 60px;
 }
-.doctorInfTpl > .touxiang img{
+
+.doctorInfTpl>.touxiang img {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
 }
-.doctorInfTpl .zuozhe_inf span{
+
+.doctorInfTpl .zuozhe_inf span {
 	font-size: 14px;
 	font-weight: 700;
 	color: #333;
 }
-.doctorInfTpl .zuozhe_inf p{
+
+.doctorInfTpl .zuozhe_inf>p {
 	font-size: 14px;
 	color: #333;
 	margin-top: 10px;
+	width: 200px;
+	height: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	margin-top: 10px;
+	font-size: 14px;
 }
-.doctorInfTpl .zuozhe_touxaing{
-	    width: 60px;
-    height: 60px;
+
+.doctorInfTpl .zuozhe_touxaing {
+	width: 60px;
+	height: 60px;
 }
-.doctorInfTpl .zuozhe_touxaing img{
+
+.doctorInfTpl .zuozhe_touxaing img {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
+}
+
+
+/*专题课程部分*/
+
+
+/*专题课程样式 （可以通用）*/
+
+.thematic_courseTpl {
+	width: 280px;
+	height: 112px;
+	margin-bottom: 18px;
+}
+
+.thematic_courseTpl:last-child {
+	margin-bottom: 0;
+}
+
+.thematic_courseTpl>a {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
+
+.thematic_courseTpl img {
+	width: 100%;
+	height: 100%;
+}
+
+
+/*活动部分*/
+
+
+/*活动那个样式可以通用*/
+
+.activityTpl {
+	border-bottom: 1px solid #F0F0F0;
+	padding-bottom: 25px;
+    margin-bottom: 20px;
+}
+.activityTpl:last-child{
+	border: none;
+	padding-bottom: 0px;
+}
+.activityTpl>div {
+	margin-bottom: 16px;	
+}
+
+.activityTpl>div:last-child {
+	margin-bottom: 0;
+
+}
+
+.activityTpl .activity_teacher {
+	margin-right: 10px;
+	font-weight: 700;
+	font-size: 14px;
+	color: #333333;
+}
+
+.activityTpl .activity_title {
+	font-size: 14px;
+	color: #333333;
+}
+
+.activityTpl .activity_time,
+.activityTpl .activity_address {
+	font-size: 14px;
+	color: #666666;
+}
+
+.activityTpl .activity_timePic {
+	display: inline-block;
+	width: 13px;
+	height: 15px;
+	background-image: url(../images/hospital/address.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	vertical-align: middle;
+	margin-right: 7.8px;
+	color: #666;
+}
+
+.activityTpl .activity_addressPic {
+	display: inline-block;
+	width: 13px;
+	height: 15px;
+	background-image: url(../images/hospital/address.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	vertical-align: middle;
+	margin-right: 7.8px;
+	color: #666;
+}
+
+/*坐诊医生招募*/
+
+/*cssTPL---坐诊医生样式*/
+.recruitment_informationTpl{
+	
+}
+
+.recruitment_informationTpl{
+	margin:20px 0;
+	font-size:14px;
+	color:#333;
+}
+.recruitment_informationTpl > h4{
+	font-size:14px;
+	font-weight:700;
+}
+.recruitment_informationTpl > a{
+	font-size: 14px;
+	color: #333;
 }
