--- a/online-web/src/main/webapp/web/css/liveVideo.css
+++ b/online-web/src/main/webapp/web/css/liveVideo.css
@@ -165,7 +165,7 @@ marquee {
   color: #fff;
 }
 .right {
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   right: 0;
   height: 100%;
