--- a/online-web/src/main/webapp/web/css/personal-center/personal-index.css
+++ b/online-web/src/main/webapp/web/css/personal-center/personal-index.css
@@ -435,7 +435,7 @@ overflow: hidden;
 	height: 60px;
 	border-radius: 50%;
 	overflow: hidden;
-	margin-bottom: 10px;
+	margin: 0 auto 10px;
 }
 .head-name-who .head-img img{
 	width: 100%;
@@ -1301,10 +1301,14 @@ overflow: hidden;
 	background: #F0F0F0;
 	border-radius: 2px;
 }
+.main-news ul .weidu{
+	color: #333;
+}
 .main-news ul li{
 	padding: 20px;
 	position: relative;
 	border-bottom: 1px solid #dedede;
+	color: #999999;
 }
 .main-news ul li span{
 	margin-left: 10px;
